# numaflow-python

./: Makefile  pyproject.toml
examples/batch-map/odd-even-drop/: example_map_batch.py  pipeline.yaml  pyproject.toml
examples/flatmap/: Makefile  entry.sh  example_flatmap.py  pipeline.yaml
examples/map/even_odd/: pyproject.toml
examples/map/flatmap/: Dockerfile  pyproject.toml
examples/map/map-batch/: Makefile  example_map_batch.py  pipeline.yaml  profile.py
examples/mapstream/batchmap_stream/: example_flatmap.py  example_map.py  example_map_urnary.py  pipeline.yaml
pynumaflow/: _constants.py
pynumaflow/batchmapper/: __init__.py  _dtypes.py  async_server.py
pynumaflow/batchmapper/servicer/: async_servicer.py
pynumaflow/flatmap/: __init__.py  _dtypes.py  async_server.py
pynumaflow/flatmap/servicer/: async_servicer.py  servicers.py
pynumaflow/mapbatch/: __init__.py  _dtypes.py  sync_server.py
pynumaflow/mapbatch/servicer/: sync_servicer.py  utils.py
pynumaflow/mapstreamer/: async_server.py
pynumaflow/mapstreamer/servicer/: async_servicer.py  servicers.py
pynumaflow/proto/batchmapper/: batchmap_pb2.py  batchmap_pb2_grpc.py
pynumaflow/proto/flatmap/: flatmap.proto  flatmap_pb2.py  flatmap_pb2_grpc.py
pynumaflow/proto/mapbatch/: mapbatch_pb2.py  mapbatch_pb2_grpc.py
pynumaflow/proto/mapper/: map_pb2.py  map_pb2_grpc.py
pynumaflow/proto/mapstreamer/: mapstream.proto  mapstream_pb2.py  (+1 more)
pynumaflow/shared/: server.py
tests/batchmap/: test_messages.py
tests/mapbatch/: test_batch_map.py  test_messages.py  test_sync_map_batch.py  utils.py
(+10 files in other folders)
